kustomize/arr-stack/bazarr/bazarr-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.253.31
  selector:
    app: bazarr
  type: LoadBalancer
  ports:
    - port: 6767
      targetPort: bazarr
