kustomize/arr-stack/bazarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`legendas-k8s.vinicima.com`) || Host(`legendas.vinicima.com`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
      middlewares:
        - name: body-size-50m
          namespace: traefik
  tls:
    secretName: vinicima-com-tls
